--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,6 @@ if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/conan.cmake")
 endif()
 include(${CMAKE_CURRENT_BINARY_DIR}/conan.cmake)
 
-# The latest fmt/7.1.3 revision in ConanCenter doesn't work
-set(ENV{CONAN_REVISIONS_ENABLED} 1)
-
 # Invoke Conan.
 conan_cmake_configure(
     REQUIRES
@@ -71,10 +68,10 @@ conan_cmake_configure(
         zlib/1.2.12
         bzip2/1.0.8
         yaml-cpp/0.6.3
-        spdlog/1.8.2
+        spdlog/1.10.0
         simdjson/0.9.1
         lz4/1.9.3
-        "fmt/7.1.3#1bb67a725d1eab1311a58551b9972893"
+        fmt/8.1.1
         cereal/1.3.2
         benchmark/1.6.1
     OPTIONS
