--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -1,6 +1,10 @@
 name: Clang
 
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore: [ '**docs' ]
+  pull_request:
+    branches-ignore: [ '**docs' ]
 
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
