--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,10 @@
 name: Docker
 
-on: push
+on:
+  push:
+    branches-ignore: [ '**docs' ]
+  pull_request:
+    branches-ignore: [ '**docs' ]
 
 jobs:
   docker:
