--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,6 +1,10 @@
 name: Python
 
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore: [ '**docs' ]
+  pull_request:
+    branches-ignore: [ '**docs' ]
 
 jobs:
 
