Force Conan 1.x (default is incompatible 2.x)

--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -67,7 +67,7 @@ jobs:
 
     - name: Install Conan
       run: |
-        pip install conan
+        pip install conan==1.59.0
 
     - name: Download preprocessed headers
       uses: actions/download-artifact@v3
